# python_template

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
src/app/: __init__.py  __main__.py
src/config/: __init__.py  __main__.py  env_config.py  main.py  yaml_config.py
src/config/config_files/: config.yaml
src/python_template/: __init__.py  __main__.py
src/utils/: logger.py  singleton.py  timer.py  try_except.py
tests/test_app/: test_main.py
tests/test_python_template/: test_module.py
tests/test_utils/: test_singleton.py  test_try_except.py
