[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "pierre"}
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "structlog>=25.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
