[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Pierre LAPOLLA"}
]
requires-python = ">=3.13"
dependencies = [
    "pedros>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "rich>=14.2.0",
]
