[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Pierre LAPOLLA"}
]
requires-python = ">=3.13"
dependencies = [
    "pedros>=0.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=3.7.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.6.0",
    "rich>=14.2.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=. --cov-report=html"
testpaths = ["tests"]
pythonpath = ["src"]